Introducing the Hungarian nobles

--- a/localisation/gecko_privileges_l_english.yml
+++ b/localisation/gecko_privileges_l_english.yml
@@ -40,4 +40,13 @@
  EST_VAL_VERY_LOW_CAVALRY_FRACTION_INF:0 "Has Cavalry units comprising less than 10% of the total Army: §Y$VAL$%§!"
  EST_VAL_HIGH_CAVALRY_FRACTION_MAM_LOY:0 "Has Cavalry units comprising at least 50% of the total Army: §G$VAL$§!"
  EST_VAL_MEDIUM_CAVALRY_FRACTION_MAM_LOY:0 "Has Cavalry units comprising at least 25% of the total Army: §G$VAL$§!"
- EST_VAL_VERY_LOW_CAVALRY_FRACTION_MAM_LOY:0 "Has Cavalry units comprising less than 10% of the total Army: §R$VAL$§!"
+ EST_VAL_VERY_LOW_CAVALRY_FRACTION_MAM_LOY:0 "Has Cavalry units comprising less than 10% of the total Army: §R$VAL$§!"^
+
+
+ #Hungarian Nobles Estate
+
+ gc_estate_hungarian_nobles:0 "Hungarian Nobles"
+ gc_estate_hungarian_nobles_desc:0 "Part of the Reforms was accepting Hungarian Nobles as equals."
+
+ gc_hungarian_nobles_privilege_1:0 "Integrate Hungarian Cavalry"
+ gc_hungarian_nobles_privilege_1_desc:0 "The Noble Cavalry of the Hungarian Nobility will join our ranks."
