--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -104,3 +104,5 @@
   AHU_ideas:0 "Habsburg Empire Ideas"
   AHU_ideas_start:0 "Habsburg Traditions"
   AHU_ideas_bonus:0 "Habsburg Ambitions"
+  gc_AHU_NI_3:0 "Habsburg Dominance"
+  gc_AHU_NI_3_desc:0 "War is an extension of Diplomacy."
