Hab Empire missions tweaked

--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -126,4 +126,4 @@
 
  #Gecko Austria
  flavor_hab.20.gc:0 "We may not abandon our German roots."
- gecko_habsburg_empire_requirements_tooltip:0 "The Entirety of Austria, Bohemia and Hungary must be directly controlled by us. Furthermore we must secure our Ambitions in Italy and conquer the City of Venice."
+ gecko_habsburg_empire_requirements_tooltip:0 "The Entirety of Austria, Bohemia and Royal Hungary must be directly controlled by us. Furthermore we must secure our Ambitions in Italy and conquer the City of Venice."
