Sicily gets province warscore cost against Naples

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -27,8 +27,9 @@
  empowered_subjects:0 "Empowered Subject"
  gc_african_corridor:0 "Trans-Saharan Corridor"
  War_chest:0 "War Chest"
- War_chest_late:0 "War Chest"
+ Peace_of_Italy:0 "Italian Renaissance"
  consolidated_russia:0 "Rus Consolidation"
+ norman_resurgence:0 "Norman Resurgence"
 
  #Province Triggered Modifiers
  conquest_of_constantinople:0 "Conquest of Constantinople"
