--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -15,6 +15,10 @@
  gecko.4.d:0 "Our previous ruler was taken from us far too soon. Luckily for us, his cousin shares many of the same talents and ambitions as his relative and has expressed his desire to continue the legacy of our late monarch. However, it will greatly upset the nobility if we bypass the tradition succession laws.."
  gecko.4.a:0 "Abdicate in favour of the late ruler's cousin."
  gecko.4.b:0 "Execute this traitor!"
+ gecko.14.t:0 "Legacy Of Our Previous King"
+ gecko.14.d:0 "Our previous ruler was taken from us far too soon. Luckily for us, his cousin shares many of the same talents and ambitions as his relative and has expressed his desire to continue the legacy of our late monarch. However, it will greatly upset the nobility if we bypass the tradition succession laws.."
+ gecko.14.a:0 "Abdicate in favour of the late ruler's cousin."
+ gecko.14.b:0 "Execute this traitor!"
  flavor_buk.1.t:0 "Bukharan Wool"
  flavor_buk.1.d:0 "The Nomads, so long a threat to our nation's stability, are finding the incentives of sedentary life more and more attractive; however they struggle to find a place in this modern economy and languish in a form of destitute poverty, leading to unrest and banditry. By relocating them and their flocks and forcing them into treasury supported enterprises we can improve their production yield, support them economically, and make hefty profits through the taxes in the regions."
  flavor_buk.1.a:0 "Excellent."
