--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -29,6 +29,7 @@
  War_chest:0 "War Chest"
  Peace_of_Italy:0 "Italian Renaissance"
  consolidated_russia:0 "Rus Consolidation"
+ mongol_consolidation:0 "Mongol Consolidation"
  norman_resurgence:0 "Norman Resurgence"
 
  #Province Triggered Modifiers
