--- a/localisation/gecko_government_l_english.yml
+++ b/localisation/gecko_government_l_english.yml
@@ -24,3 +24,7 @@
  #horde
  gc_tribe_becomes_horde_reform:0 "Settle Down"
  gc_tribe_becomes_horde_reform_desc:0 "The steppes are no longer suitable for our people. Let us abandon the nomadic traditions of our ancestors and fully embrace the civilised life so many others have chosen."
+
+ #Hungary
+ gc_greater_hungary_reform:0 "Bulwark of Christianity"
+ gc_greater_hungary_reform_desc:0 "As the principal defenders of Christendom against the Muslim threat, we have come to be known as the Bulwark of Christianity. By demonstrating our ability to match anything the infidel can throw at us, we can ensure that this title is thoroughly deserved."
