Hungarian missions rework

--- a/localisation/gecko_countries_l_english.yml
+++ b/localisation/gecko_countries_l_english.yml
@@ -21,3 +21,6 @@
   #Italy
   GC_EMPIRE_OF_GOD:0 "Empire of God"
   GC_EMPIRE_OF_GOD_ADJ:0 "Heavenly"
+  #Hungary
+  EOH:0 "Empire of Hungary"
+  EOH_ADJ:0 "Hungarian"
