--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -169,3 +169,6 @@
  #Hungary
  gc_hungary_anatolian_conquest:0 "Conquest of Anatolia"
  gc_hungary_conquest_of_jerusalem:0 "Conquest of Jerusalem"
+ gc_hungary_italian_domination:0 "North Italian Domination"
+ gc_hungary_conquest_of_rome:0 "Protector of Rome"
+ gc_hungary_conquest_of_poland:0 "Integration of West Slavic Culture"
