smole burg buff

--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -406,5 +406,8 @@ gc_hungary_mission_39_desc:0 ""
 gc_hungary_mission_40_title:0 "Free Red Ruthenia"
 gc_hungary_mission_40_desc:0 ""
 
+#Burgundy
 
+repulse_gank_bur_title:0 "Repulse the English"
+repulse_gank_bur_desc:0 ""
 
