Small swiss eco buff

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -176,3 +176,6 @@
 #Burgundy
 lowland_integration:0 "Lowland Integration"
 defense_of_burgundy:0 "Repulse the English"
+
+#Swiss
+swabian_trade:0 "Swabian Trade"
