Decentralisation reforms buffed for princes

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -179,3 +179,5 @@ defense_of_burgundy:0 "Repulse the English"
 
 #Swiss
 swabian_trade:0 "Swabian Trade"
+
+too_many_subjects:0 "Too Many Subjects"
