--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -181,3 +181,6 @@ defense_of_burgundy:0 "Repulse the English"
 swabian_trade:0 "Swabian Trade"
 
 too_many_subjects:0 "Too Many Subjects"
+
+#Critical Province
+critical_province:0 "Critical Province"
