--- a/localisation/gecko_diplomatic_actions_l_english.yml
+++ b/localisation/gecko_diplomatic_actions_l_english.yml
@@ -14,5 +14,5 @@
   gc_may_not_declare_war_yet_mamorm:0 "You may not declare war on this nation or their subjects until at least 1460."
   gc_may_not_declare_war_yet_mormal:0 "You may not declare war on this nation or their subjects until at least 1460."
   gc_may_not_declare_war_yet_brahsa:0 "You may not declare war on this nation or their subjects until at least 1460."
-  gc_may_not_declare_war_yet:0 "You may not declare war player wars until at least 1455."
+  gc_may_not_declare_war_yet:0 "You may not declare war on players until at least 1455."
  
