--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -349,13 +349,13 @@ gc_hungary_mission_20_desc:0 ""
 gc_hungary_mission_21_title:0 "Seize Dalmatia"
 gc_hungary_mission_21_desc:0 ""
 
-gc_hungary_mission_22_title:0 "Italian foothold"
+gc_hungary_mission_22_title:0 "Italian Foothold"
 gc_hungary_mission_22_desc:0 ""
 
-gc_hungary_mission_23_title:0 "Expand the frontier"
+gc_hungary_mission_23_title:0 "Expand the Frontier"
 gc_hungary_mission_23_desc:0 ""
 
-gc_hungary_mission_24_title:0 "Control Napels"
+gc_hungary_mission_24_title:0 "Control Naples"
 gc_hungary_mission_24_desc:0 ""
 
 gc_hungary_mission_25_title:0 "March on Rome"
