--- a/localisation/gecko_diplomatic_actions_l_english.yml
+++ b/localisation/gecko_diplomatic_actions_l_english.yml
@@ -15,4 +15,9 @@
   gc_may_not_declare_war_yet_mormal:0 "You may not declare war on this nation or their subjects until at least 1460."
   gc_may_not_declare_war_yet_brahsa:0 "You may not declare war on this nation or their subjects until at least 1460."
   gc_may_not_declare_war_yet:0 "You may not declare war on players until at least 1450."
- 
+  sm_tooltip_fraengally:0 "We cannot ally the Kingdom of England."
+  sm_tooltip_engfraally:0 "We cannot ally the Kingdom of France."
+  sm_tooltip_fraburally:0 "We cannot ally the Kingdom of Burgundy."
+  sm_tooltip_burfraally:0 "We cannot ally the Kingdom of France."
+  sm_tooltip_burengally:0 "We cannot ally the Kingdom of England."
+  sm_tooltip_engburally:0 "We cannot ally the Kingdom of Burgundy."
