Muscovy/Crimea/Poland cant ally till tier 4 reform

--- a/localisation/gecko_diplomatic_actions_l_english.yml
+++ b/localisation/gecko_diplomatic_actions_l_english.yml
@@ -21,3 +21,9 @@
   sm_tooltip_burfraally:0 "We cannot ally the Kingdom of France."
   sm_tooltip_burengally:0 "We cannot ally the Kingdom of England."
   sm_tooltip_engburally:0 "We cannot ally the Kingdom of Burgundy."
+  sm_tooltip_moscrially:0 "We cannot ally the Khanate of Crimea."
+  sm_tooltip_crimosally:0 "We cannot ally the Grand Principality of Muscovy."
+  sm_tooltip_polcrially:0 "We cannot ally the Khanate of Crimea."
+  sm_tooltip_cripolally:0 "We cannot ally the Kingdom of Poland."
+  sm_tooltip_muspolally:0 "We cannot ally the Kingdom of Poland."
+  sm_tooltip_polmosally:0 "We cannot ally the Grand Principality of Muscovy."
