Hormuz gets a bonus for defending against mamluks pre 1470

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -143,6 +143,7 @@
  #arabia
  
  wahabism_modifier:0 "Wahabi Scholar"
+ Defense_of_Arabia:0 "Defense of Arabia"
 
  #Italy 
  gc_pope_controls_roman_empire:0 "Empire of God"
