--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -143,7 +143,7 @@
 
  gc_hungary_event.2.t:0 "The Future of Hungary"
  gc_hungary_event.2.d:0 "You must decide on the biggest question Hungary has ever faced. Do we press our claims to the thrones of Europe, or do we take on the burden of removing the Turk from Europe?"
- gc_hungary_event.2.a:0 "Varna will be forgotten."
+ gc_hungary_event.2.a:0 "Varna will be but a footnote in history. Let us retake the Christian lands once and for all!"
  gc_hungary_event.2.b:0 "Press our claims in Europe."
 
  gc_hungary_event.3.t:0 "The Empire of Hungary"
