--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -189,3 +189,5 @@ too_many_subjects:0 "Too Many Subjects"
 critical_province:0 "Critical Province"
 
 gecko_b:0 "Bankruptcy"
+
+gc_mongol_rule_tibet:0 "Mongol Rule of Tibet"
