--- a/localisation/cossacks_l_english.yml
+++ b/localisation/cossacks_l_english.yml
@@ -1427,6 +1427,11 @@
  curtail_estate_dhimmi_desc:0 "The Dhimmi have a stranglehold on our government. To seize control back from them, we will need to curtail their power and privileges."
  curtail_estate_jains_title:0 "Curtail the Jains"
  curtail_estate_jains_desc:0 "The Jains have a stranglehold on our government. To seize control back from them we will need to curtail their power and privileges."
+ gain_access_to_estate_dhimmi_title:0 "Establish the Dhimmi Estate"
+ gain_access_to_estate_dhimmi_desc:0 "With our expansion the number of unhandled heathens grows in our [Root.GovernmentName]. We should establish an internal political entity which purpose is to deal with the heathens."
+ brahmin_estate_is_not_in_power_tt:0 "The §YBrahmins§! are NOT in power."
+ gain_dhimmi_estate_tt:0 "[Root.GetName] gains access to the §YDhimmi§! estate."
+ lose_access_to_brahmins_tt:0 "[Root.GetName] loses access to the §YBrahmins§! estate."
  ESTATES_TITLE:0 "Estates"
  ACHIEVEMENTS_FIX_SETTINGS:0 "Change Settings to allow Achievements"
  RNW_GENERATION_HOST:0 "Generating Random New World..."
