Cossack Cavalry localised to Heavy Cavalry

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -42,16 +42,16 @@
  REGCAT_mercenary:0 "Mercenaries"
  REGCAT_banner:0 "Banners"
  REGCAT_streltsy:0 "Streltsy"
- REGCAT_cossacks:0 "Cossacks"
+ REGCAT_cossacks:0 "Heavy"
  REGCAT_janissaries:0 "Janissaries"
  REGCAT_rajput:0 "Rajput"
- COSSACKS_NAME:0 "$HOME$'s $NUM$$ORDER$ Cossacks"
+ COSSACKS_NAME:0 "$HOME$'s $NUM$$ORDER$ Heavy"
  RAJPUT_NAME:0 "$HOME$'s $NUM$$ORDER$ Rajputs"
- COSSACKS_REGIMENT:0 "Cossacks Regiment\nShock Damage Bonus: $VAL$"
+ COSSACKS_REGIMENT:0 "Heavy Regiment\nShock Damage Bonus: $VAL$"
  STRELTSY_NAME:0 "$HOME$'s $NUM$$ORDER$ Streltsy Regiment"
  STRELTSY_REGIMENT:0 "Streltsy Regiment\nFire Damage Bonus: $VAL$"
  streltsy_modifier:0 "Reliance on Streltsy"
- cossacks_modifier:0 "Reliance on Cossacks"
+ cossacks_modifier:0 "Combined Arms"
  SIBERIAN_FRONTIER_LACKS_IDEA:0 "Without a national idea, it's impossible to establish a Siberian frontier."
  CONFIRSIBERIANFRONTIER:0 "Confirm Establish Frontier"
  CONFIRSIBERIANFRONTIER_TEXT:0 "$EFFECT$\nAre you sure?"
