--- a/localisation/gecko_privileges_l_english.yml
+++ b/localisation/gecko_privileges_l_english.yml
@@ -19,7 +19,7 @@
 
 
 #mamluk privilege
- estate_gc_noble_levies:0 "Noble Levies"
+ estate_gc_noble_levies:0 "Recruit Heavy Cavalry"
  estate_gc_noble_levies_desc:0 " "
 
 #bunker mod merge
