--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -45,9 +45,9 @@
  REGCAT_cossacks:0 "Heavy"
  REGCAT_janissaries:0 "Janissaries"
  REGCAT_rajput:0 "Rajput"
- COSSACKS_NAME:0 "$HOME$'s $NUM$$ORDER$ Heavy"
+ COSSACKS_NAME:0 "$HOME$'s $NUM$$ORDER$ Heavy Cavalry"
  RAJPUT_NAME:0 "$HOME$'s $NUM$$ORDER$ Rajputs"
- COSSACKS_REGIMENT:0 "Heavy Regiment\nShock Damage Bonus: $VAL$"
+ COSSACKS_REGIMENT:0 "Heavy Cavalry Regiment\nShock Damage Bonus: $VAL$"
  STRELTSY_NAME:0 "$HOME$'s $NUM$$ORDER$ Streltsy Regiment"
  STRELTSY_REGIMENT:0 "Streltsy Regiment\nFire Damage Bonus: $VAL$"
  streltsy_modifier:0 "Reliance on Streltsy"
