Full state prosperity mod added thanks to dum_idiet

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -191,3 +191,5 @@ critical_province:0 "Critical Province"
 gecko_b:0 "Bankruptcy"
 
 gc_mongol_rule_tibet:0 "Mongol Rule of Tibet"
+
+X_full_state_prosperity_pmod:0 "Conquer Full State for Prosperity Growth"
