--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -193,3 +193,5 @@ gecko_b:0 "Bankruptcy"
 gc_mongol_rule_tibet:0 "Mongol Rule of Tibet"
 
 X_full_state_prosperity_pmod:0 "Conquer Full State for Prosperity Growth"
+emperor_renovatio_emperor:0 "Renovatio Imperii"
+gecko_development:0 "Internal Development"
