--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -72,7 +72,7 @@
  tooltip_development_30:0 "European 30 development province"
  tooltip_thrace_area:0 "Province in the Thrace Area"
  Decay_minor:0 "Minor Decay"
- We_stand_alone:0 "We Stand Alone"
+ We_stand_alone:0 "Imperial Ambition"
  cb_nice_borders:0 "Border War"
  cb_nice_borders_desc:0 ""
  nice_borders_cb:0 "Border Claims"
