African modifiers added

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -195,3 +195,6 @@ gc_mongol_rule_tibet:0 "Mongol Rule of Tibet"
 X_full_state_prosperity_pmod:0 "Conquer Full State for Prosperity Growth"
 emperor_renovatio_emperor:0 "Renovatio Imperii"
 gecko_development:0 "Internal Development"
+African_Slave_Trade:0 "African Slave Trade"
+Control_African_Slave_Trade:0 "Full Control of African Slave Trade"
+African_Gold_Monopoly:0 "African Gold Monopoly"
