African Gold modifier

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -198,3 +198,4 @@ gecko_development:0 "Internal Development"
 African_Slave_Trade:0 "African Slave Trade"
 Control_African_Slave_Trade:0 "Full Control of African Slave Trade"
 African_Gold_Monopoly:0 "African Gold Monopoly"
+African_Gold:0 "African Gold"
