--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -111,3 +111,4 @@
   EOH_ideas:0 "Empire of Hungary Ideas"
   EOH_ideas_start:0 "Hungarian Traditions"
   EOH_ideas_bonus:0 "Hungarian Ambitions"
+  MODIFIER_CAWA_COST:0 "Tercio Cost"
