--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -199,3 +199,5 @@ African_Slave_Trade:0 "African Slave Trade"
 Control_African_Slave_Trade:0 "Full Control of African Slave Trade"
 African_Gold_Monopoly:0 "African Gold Monopoly"
 African_Gold:0 "African Gold"
+African_Slave_Trade_Western:0 "African Slave Trade"
+iberian_trade:0 "Iberian Trade"
