--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -201,3 +201,4 @@ African_Gold_Monopoly:0 "African Gold Monopoly"
 African_Gold:0 "African Gold"
 African_Slave_Trade_Western:0 "African Slave Trade"
 iberian_trade:0 "Iberian Trade"
+Defense_of_the_Rus:0 "Defense of the Rus"
