--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -9,6 +9,10 @@
  genua:0 "Italy"
  #venice:0 "Rome"
  basra:0 "Arabia"
+ lahore_trade:0 "Samarkand"
+ trade_company_lahore_trade:0 "Samarkand Charter"
+ TRADE_COMPANY_LAHORE_trade_Root_Culture_GetName:0 "[Root.Culture.GetName] Samarkand Company"
+ TRADE_COMPANY_LAHORE_trade_Asia_Trade_Company:0 "Samarkand Trade Company"
  TRADE_COMPANY_caucasus_Root_Culture_GetName:0 "[Root.Culture.GetName] Caucasus Company"
  TRADE_COMPANY_caucasus_Near_East_Trade_Company:0 "[Root.Culture.GetName] Caucasus Company"
  gc_south_germany_tradenode:0 "Wurttemberg"
