--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -203,3 +203,4 @@ African_Slave_Trade_Western:0 "African Slave Trade"
 iberian_trade:0 "Iberian Trade"
 Defense_of_the_Rus:0 "Defense of the Rus"
 Ahead_of_time:0 "Ahead of Time"
+russian_consolidation:0 "Russian Consolidation"
