--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -188,7 +188,9 @@ too_many_subjects:0 "Too Many Subjects"
 #Critical Province
 critical_province:0 "Critical Province"
 
-gecko_b:0 "Bankruptcy"
+gecko_b:0 "Recent Bankruptcy"
+gecko_debt_tackled:0 "Economic Recovery"
+gecko_debt_tackled_2:0 "Slowed Military Build-up"
 
 gc_mongol_rule_tibet:0 "Mongol Rule of Tibet"
 
