--- a/localisation/origins_l_english.yml
+++ b/localisation/origins_l_english.yml
@@ -251,7 +251,7 @@
  flavor_mal.41.advisor.horn_of_africa:1 "Although the way back home is very well known to the group, the men decided to take an alternative route home. By travelling the strait of [1330.GetName], the three found the realm of the one who was called the home of "Prester John".[Root.GetMaliRegionalCapital]"
  flavor_mal.41.advisor.home:0 "Over five years ago three great advisors of the great [Root.Monarch.GetTitle] [Root.Monarch.GetName] [Root.Monarch.Dynasty.GetName] started pilgrimage to [385.GetName] on behalf of their [Root.Monarch.GetTitle]. However, the bold decision was made that the route should go through Europe instead of taking the fastest way, allowing these men to see and witness things [Root.Monarch.GetSheHe] would never have seen.\nAfter such a long time, they have finally returned to [Root.Capital.GetName]! Although the pilgrimage left them unable to be assigned their work as advisors, their wisdom shall enlighten [Root.Monarch.GetName]!"
  flavor_mal.41.a:0 "The people of [selected_biggest_country_of_region.GetName] certainly deserve a big donation!"
- flavor_mal.41.a.tt:1 "[Root.GetName] will donate gold to [selected_biggest_country_of_region.GetName].\nThe donation contains §R[Root.mal_money_to_give_tt.GetValue]§! Ducats for [selected_biggest_country_of_region.GetName]. If they accept, the Inflation of [selected_biggest_country_of_region.GetName] will increase by §R[Root.trade_income_variable_tt.GetValue]§!, but their buildings, great projects, army and navy costs will be reduced by §G25.0%§! for §Y5 years§!.\n\nDue to influx of [Root.GetAdjective] gold, every country with their capital in [selected_biggest_country_of_region.Capital.GetRegionName] gets the modifier '§YGold of Mali§!' for §Y5 years§!, which has the following effects:\nYearly Inflation Reduction: §R-1.00§!"
+ flavor_mal.41.a.tt:1 ""
  flavor_mal.41.b:0 "Just a little bit of gold for the people of the region should suffice."
  flavor_mal.41.b.tt:1 "Due to influx of [Root.GetAdjective] gold, every country with their capital in [selected_biggest_country_of_region.Capital.GetRegionName] gets the modifier '§YGold of Mali§!' for §Y5 years§!, which has the following effects:\nYearly Inflation Reduction: §R-1.00§!"
  flavor_mal.41.c:0 "We cannot afford any donation."
@@ -261,23 +261,22 @@
  flavor_mal.41.f:0 "What a lovely place!"
  mal_invest_in_region_tt:0 "[Root.GetName] will invest some of the gold into §Y[selected_biggest_country_of_region.Capital.GetRegionName]§!. Every owned province in §Y[selected_biggest_country_of_region.Capital.GetRegionName]§! receives '§YGold Investment§!', which gives the following effects:\nLocal Construction Cost: §G-15.0%§!\nLocal Construction Time: §G-15.0%§!"
  flavor_mal.43.t:0 "[From.GetName] visits [Root.GetName]!"
- flavor_mal.43.desc.a:0 "The [From.Monarch.GetTitle] of [From.GetName] has arrived in [Root.Capital.GetName]. The wise [From.Monarch.GetTitle] is on a pilgrimage to [385.GetName] and has visited our villages and cities. Apparently, [From.Monarch.GetSheHe] has been impressed by our hospitality and now offers us a donation of [Root.mal_money_to_give_tt.GetValue] Ducats. The amount of pure gold is much more than we have ever seen, and accepting this donation might damage our economy, but it would allow us to vastly improve our infrastructure."
- flavor_mal.43.desc.b:0 "Three advisors of [From.GetName] have arrived in [Root.Capital.GetName]. These wise men are on a pilgrimage to [385.GetName] and have visited our villages and cities. Apparently, they have been impressed by our hospitality and now offer us a donation of [Root.mal_money_to_give_tt.GetValue] Ducats. The amount of pure gold is much more than we have ever seen, and accepting this donation might damage our economy, but it would allow us to vastly improve our infrastructure."
- flavor_mal.43.a:0 "Take the money."
- flavor_mal.43.a.tt:0 "[Root.GetName] gains §G[Root.mal_money_to_give_tt.GetValue]§! Ducats."
- add_025_inflation:0 "[Root.GetName] will get §R[Root.trade_income_variable_tt.GetValue]§! Inflation."
+ flavor_mal.43.desc.a:0 ""
+ flavor_mal.43.desc.b:0 ""
+ flavor_mal.43.a.tt:0 ""
+ add_025_inflation:0 ""
  flavor_mal.43.b:0 "Our economy cannot handle the gold."
  flavor_mal.43.b.tt:0 "Although we decline the donation of [From.GetName], the pilgrims will continue to spend gold in our country."
  flavor_mal.44.t:0 "[From.GetName] accepts the Gift!"
  flavor_mal.44.desc.a:0 "After an audience with [From.Monarch.GetName], the great [From.Monarch.GetTitle] of [From.GetName] accepted the gift of [Root.Monarch.GetName] and wishes [Root.Monarch.GetHerHim] a good journey."
  flavor_mal.44.desc.b:0 "After an audience with [From.Monarch.GetName], the great [From.Monarch.GetTitle] of [From.GetName] accepted the gift of the three pilgrims and wishes them a good journey."
  flavor_mal.44.a:0 "May the [From.Culture.GetName] do the best with the gold."
- flavor_mal.44.a.tt:0 "Transfer §R[Root.mal_money_to_give.GetValue]§! Ducats to §Y[From.GetName]§!."
+ flavor_mal.44.a.tt:0 ""
  flavor_mal.45.t:0 "[From.GetName] declines the Gift"
  flavor_mal.45.desc.a:0 "Although [Root.Monarch.GetName] intended to donate a great sum of gold, the [From.Monarch.GetTitle] of [From.GetName] refused to accept the gold. [From.Monarch.GetName] claims that the gold would do more harm than good."
  flavor_mal.45.desc.b:0 "Although the three men intended to donate a great sum of gold, the [From.Monarch.GetTitle] of [From.GetName] refused to accept the gold. [From.Monarch.GetName] claims that the gold would do more harm than good."
  flavor_mal.45.a:0 "So be it."
- flavor_mal.45.b:0 "Maybe the [mal_next_gold_target.Monarch.GetTitle] of [mal_next_gold_target.GetName] would like the gift instead."
+ flavor_mal.45.b:0 ""
  flavor_mal.46.t:0 "Gold Influx from [From.GetName]!"
  flavor_mal.46.desc:0 "Important pilgrims from [From.GetName] arrived in our home region and have brought unseen amounts of gold! Our masters of mint are giving their best to reduce the impact, but the inflation will be rising for the next five years."
  flavor_mal.46.a:0 "That will be some rough years..."
