--- a/localisation/leviathan_l_english.yml
+++ b/localisation/leviathan_l_english.yml
@@ -1003,7 +1003,7 @@
  hawaii_lift_naha_title:0 "Lift the Naha Stone"
  hawaii_lift_naha_desc:0 "The Naha Stone is a sacred symbol of the Naha Clan in the Great Island. It is believed that the stone can distinguish if the bloodline of a clan's newborn is legitimate or not. Its power, though, goes far beyond. That who is able to lift the stone is destined to be the ruler of the archipielago."
  hawaii_prove_prowess_title:0 "Prove Prowess"
- hawaii_prove_prowess_desc:0 "The ruler that unites the archipielago into a single realm will be blessed by the gods. As the ruler of [ROOT.TAG.GetName], it is my duty to bring them all together."
+ hawaii_prove_prowess_desc:0 ""
  maori_haka_title:0 "Perform a Haka"
  maori_haka_desc:0 "The Haka is a ceremonial dance in our culture, often used as a way of challenging our rivals. By performing the Haka we are showing our enemies that we do not fear them in the slighlest. They can come and try to bring us down. If they dare."
  maori_riri_title:0 "Riri Wars"
@@ -1267,7 +1267,7 @@
  estate_regency_events.5.d:0 "It is said that burghers only care about money. As long as money is abundant, they are happy and will not cause many problems. At least, that is what we thought. [Root.Monarch.GetName] and [Root.Monarch.GetHerHis] faction have used their power to further advance some shaddy businesses while they are in power. Smuggling is nothing new to us, we know it and it would not be the first time we turn our eyes blind to this, but this time these illicit moves have irritated another nation and they might use this incident as an excuse to declare war on us and get some compensations. Unfortunately, they are not willing to negotiate."
  estate_regency_events.5.a:0 "We can only wait."
  estate_regency_events.6.t:0 "Intolerance Raises"
- estate_regency_events.6.d:0 "Nobody will be surprised if it is said that every religious power will always try to perpetuate their power or assert their domination over the rest when they rule. And this is exactly the situation [Root.TAG.GetName] is facing. The clergy in charge is using their power to remove the influence of other religions in our realm and their power is too big to refuse. A timid protest is all we have been able to elevate. We will change this policy in the future, no doubt, but for now we will need to live with it."
+ estate_regency_events.6.d:0 ""
  estate_regency_events.6.a:0 "A problem at a time."
  religious_intolerance_mod:0 "Religious Intolerance"
  desc_religious_intolerance_mod:0 "A new wave of intolerance against those not following the country's religion has started."
@@ -1432,7 +1432,7 @@
  extended_regency_events.5.d:0 "It started with some innocent laughs, some casual comments, some sinless suggestions. Then it started transforming into some mischievous grins, some sharp comments, some sinister commands.\nThe entire palace knew that [Root.Monarch.GetName] had become too used to power, but few would even consider that [Root.Monarch.GetSheHe] would go this far to preserve it. Our rightful heir, [Root.Heir.GetName], has been imprisoned after being invited to "go find the special treasure" hidden in the dungeons."
  extended_regency_events.5.a:0 "Rumors spread around our country."
  extended_regency_events.6.t:0 "Glory Days"
- extended_regency_events.6.d:0 "Sometimes hope is found in the most unexpected places. Since the start of [Root.Monarch.GetHerHis] regency, [Root.Monarch.GetName] has proven to be an excellent ruler, always aware of the necessities of our people. Some even go as far as to say that our nation would experience more prosperity if [Root.Monarch.GetSheHe] would stay as a ruler a little bit longer...\nGiven the imminent age of majority of [Root.Heir.GetName], that should be by no means possible, however, [Root.Heir.GetHerHis] ineptitude has already infuriated most of [Root.Heir.GetHerHis] teachers, many of them leaving our court after unsuccessfully trying to rein [Root.Her.GetHerHim] in."
+ extended_regency_events.6.d:0 ""
  extended_regency_events.6.a:0 "I am sure something can be done..."
  extended_regency_events.6.b:0 "[Root.Heir.GetSheHe] is not the first incompetent heir."
  increase_force_limit_from_colony:0 "Increase Draft from Colony"
@@ -1577,7 +1577,7 @@
  colonial_missionaries:0 "Colonial Missionaries"
  desc_colonial_missionaries:0 "Religious missionaries have been sent to keep the peace in our colony."
  colonial_nation.190.t:1 "An Absent [Root.GetLowLevelOfficialForCountry]"
- colonial_nation.190.d:1 "It has been said, among those who are willing to listen, that the [Root.GetLowLevelOfficialForCountry] who [Root.Monarch.GetTitle] [Root.Monarch.GetName] so kindly appointed to take care of our colony has been absent of his duties for a long time. He has been seen taking part in the greatest of feasts and balls, here in [Root.GetName], quite... far from those he aims to govern.\nOf course, it is easier to revolt against the ruler if the ruler is not there, so news about a dangerous uprising in [absent_governor_province.GetName] have finally reached our court. When confronted with these facts, he has been heard saying: "Those mosquitoes were eating me alive!""
+ colonial_nation.190.d:1 "It has been said, among those who are willing to listen, that the [Root.GetLowLevelOfficialForCountry] who [Root.Monarch.GetTitle] [Root.Monarch.GetName] so kindly appointed to take care of our colony has been absent of his duties for a long time. He has been seen taking part in the greatest of feasts and balls, here in [Root.GetName], quite... far from those he aims to govern.\nOf course, it is easier to revolt against the ruler if the ruler is not there, so news about a dangerous uprising in have finally reached our court. When confronted with these facts, he has been heard saying: "Those mosquitoes were eating me alive!""
  colonial_nation.190.a:1 "He sure won't have to worry about mosquitoes anymore..."
  colonial_nation.191.t:0 "The Eyes Are Not Here"
  colonial_nation.191.d:0 "There are no eyes here. In this empty valley voices die faster than the nightfall, its darkness impossible to escape because there is no desire to escape. The succession of days is impossible to count, every day is the next and the previous, their fate tightly fitted like a diamond in a pendant.\nAnd so the birdsongs return one day. And it is a normal day, except for the birds. And their voices. And the fact that it does not feel like any other day. And then there is a child. A small child, a normal child. He has tried to escape the village before, but he always returns, no matter how often he leaves or how far he goes, he always returns, sitting soundlessly on the porch.\nAnd today he leaves again. And so he returns. And when he returns all the birds in the village have grown flowers in their mouths, their singing voices forever muted - silence is restored again. And it is a miracle, they say, because flowers are such a precious thing and the calmness of the village was so important we cannot dare to lose it, surely we cannot dare to lose it."
@@ -1602,7 +1602,7 @@
  monument_boost:0 "Monument Improvements"
  desc_monument_boost:0 "Hiring the best masons in our nation has helped to optimize the construction of our monuments."
  monument_church_of_the_people:0 "Church of the People"
- desc_monument_church_of_the_people:0 "From the lowly peasant to the highest of the clerics, everyone of our [Root.Government.GetName] is welcome in Saint Peter's Basilica."
+ desc_monument_church_of_the_people:0 ""
  monument_events.3.t:0 "The House of the Lord"
  monument_events.3.d:0 "God has eyes everywhere, but His overwhelming presence must find a place to rest. Saint Peter's Basilica has finished its construction and the house of the Lord is now ready to offer such an appropriate resting place. From there, [Root.Monarch.GetTitle] [Root.Monarch.GetName] is able to oversee everything as he was part of God's eyes. The most respected members of the Church have advised us to hold a big mass in order to celebrate and honor this moment of joy."
  monument_events.3.a:0 "We should invite our allies!"
